Fixed display of inline blocks.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -74,9 +74,6 @@ button, input {
 	display: table-cell;
 	padding: 5px;
 }
-#anonymous {
-	display: inline-block;
-}
-#signin {
+#anonymous, #signin {
 	display: inline-block;
 }
