--- a/static/css/index.css
+++ b/static/css/index.css
@@ -74,6 +74,13 @@ button, input {
 	display: table-cell;
 	padding: 5px;
 }
+.success {
+	display: none;
+	color: #70BA00;
+}
+.error {
+	color: #961200;
+}
 #anonymous, #signin {
 	display: inline-block;
 }
