--- a/static/css/index.css
+++ b/static/css/index.css
@@ -56,10 +56,13 @@ li a.active {
 }
 section {
 	display: none;
-	margin: 0 20px;
+	margin: 0;
+	padding: 20px;
 	height: 300px;
 }
 h2 {
+	margin: 0;
+	padding: 0;
 	font-size: 1.6em;
 	font-weight: normal;
 }
