--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,23 @@
+/**
+ * RiverID CSS Stylesheet
+ * ======================
+ *
+ * This file is part of RiverID.
+ *
+ * RiverID is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * RiverID is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with RiverID.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 html {
 	font: 0.8em / 1.6 verdana, arial, sans-serif;
 	background: #ddd;
